<resources>
    <string name="app_name">Stop The Rape</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_emmergency_maps">Map</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_nav_drawer">STOP THE RAPE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Stop The Rape</string>
    <string name="nav_header_subtitle">workingonit</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="defaultHelpMessageString">GET HELP, I AM IN DANGER!</string>
    <string name="defaultTrustedNumber">+8801681845722</string>

    <!--string name="google_maps_api_key"></string!-->

    <string name="gps_enabled">GPS is not Enabled!</string>
    <string name="gps_enabled_question">Do you want to enable GPS?</string>
    <string name="yes">yes</string>
    <string name="cancel">Cancel</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="time">Time of request:</string>
    <string name="phone_id">phone ID:</string>
    <string name="response">Response:</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="user_profile">Profile</string>
    <string name="log_out">Logout</string>
    <string name="sample_mail">shamimbinzahid@gmail.com</string>
    <string name="location_info_header">LOCATION INFO</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="time_label">Time</string>
    <string name="phone_id_label">Phone ID</string>
    <string name="label_share_my_location_to_all_trusted_contacts">Share My Location \nTo All Trusted Contacts</string>
    <string name="label_edit_custom_message">EDIT CUSTOM MESSAGE</string>
    <string name="label_edit_trusted_contacts">EDIT TRUSTED CONTACTS</string>
    <string name="hashtag_label_stoptherape">#StopTheRape</string>
    <string name="reload_symbol">↻</string>
    <string name="label_back">Back</string>
    <string name="custom_message_header">CUSTOM MESSAGE</string>
    <string name="label_enter_your_custom_help_message_here">Enter Your Custom Help Message Here</string>
    <string name="label_save_message">Save Message</string>
    <string name="label_set_default">Set Default</string>
    <string name="label_preview_message">Preview Message</string>
    <string name="alert_message_custom_message">Make Sure Message isn\'t too long!  Your Location (Google Maps Link) and Time will be appended with this message automatically.</string>
    <string name="send_feedback_button_text">Click Here to Send Your Feedback,  This will open a Google Form in Your Browser. Fill It Up</string>
    <string name="about_section">Stop The Rape is a cloud based security alert service app that uses your mobile networks and GPS to send your realtime location to you trusted contacts and anonymous users of the app in case of emergency so that someone can be aware that you just might be in danger and they can be there just in time to save you from a probable mishap. It is a matter of a terrible sorrow that women and even children are being victim of rape everyday. \n No Pessimism shall consume us. Together the youth we can make our society better for everyone. A Small Step of Contribution can Change Everything!</string>
    <string name="about_beta_version">
        This is an early beta version of this app, which means features are meant to be buggy where other ones may not even work. There are only two of us working on this right now and we are trying. The stable version to come with more working features and might change how to interact with the app. We planned some features such as,
        \n\t# The Police Helpline will come with actual numbers of course ;-;
        \n\t# Asking for help in the anonymous option will broadcast your location to all users nearby as a help message.
        \n\t# The anonymous help and offline help option triggers are to be merged together with separated customisation options.
        \n\t# We plan to have the map in the home screen and minimal icon buttons for actions. Making the UX more intuitive.
        \n\t# We are always open for your suggestions.

        \n\n #StaySafe  #Together  #StopTheRape

    </string>
    <string name="back_text">Back</string>string>

</resources>
